syntax = "proto3";
package graphdbfeeder;

option go_package = "gitlab.ost.ch/ins/jalapeno-api/graph-db-feeder/proto/graph-db-feeder;graphdbfeeder";

message NodeIds {
    repeated string ids = 1;
}

message Node {
    string key = 1;
    string name = 2;
    int32 asn = 3;
    string router_ip = 4;
}

service GraphDbFeeder {
    rpc GetNodes(NodeIds) returns (stream Node) {}
}
